fix(InfosCarrousel): Spacing values need to be wrapped in parenthesis

--- a/react/InfosCarrousel/styles.styl
+++ b/react/InfosCarrousel/styles.styl
@@ -14,20 +14,18 @@
 
 .InfosCarrousel-navigation
     position absolute
-    bottom rem(10)
-    right spacing_values.xs
+    bottom (spacing_values.xs)
+    right (spacing_values.xs)
     display flex
     align-items center
 
     +mobile()
         bottom rem(4)
-        right 0
+        right rem(4)
 
 .InfosCarrousel-arrow
     background none
     border 0
-    min-width spacing_values.xl
-    padding spacing_values.m
 
     &:disabled
         opacity .24
@@ -35,3 +33,5 @@
 .InfosCarrousel-separator
     border-left 1px solid var(--silver)
     height rem(16)
+    margin 0 (spacing_values.xs)
+
